cyberchef-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef-space
  labels:
    app: cyberchef-app
