cyberchef-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef-service
  namespace: cyberchef-space
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: cyberchef
    name: cyberchef-pod
