cyberchef-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyberchef-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
  namespace: cyberchef-space
spec:
  tls:
    - hosts:
        - cyberchef.example.com
      secretName: cyberchef-tls
  rules:
    - host: "cyberchef.example.com"
      http:
        paths:
          - backend:
              service:
                name: cyberchef-service
                port:
                  number: 80
            path: "/"
            pathType: Prefix
